// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignature Registration Form should render form step 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div>
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          class="space-y-8"
          data-testid="MultiSignatureRegistrationForm--form-step"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                Multisignature Registration
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Register a new multisignature address by adding participants.
              </div>
            </div>
          </div>
          <div>
            <div
              class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                  data-testid="FormLabel"
                  for="address"
                >
                  Multisignature Participant
                  <div
                    class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                    data-testid="FormLabel__required"
                  />
                </label>
                <div>
                  <div
                    class="flex relative items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1 z-20"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                    </div>
                    <div
                      class="relative w-full"
                    >
                      <input
                        aria-invalid="false"
                        class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                        data-testid="select-list__input"
                        name="address"
                        readonly=""
                        value=""
                      />
                      <div
                        class="relative w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-1-menu"
                          role="combobox"
                        >
                          <label
                            for="downshift-0-input"
                            id="downshift-1-label"
                          />
                          <div
                            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                            data-testid="SelectDropdownInput"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="downshift-1-menu"
                              aria-labelledby="downshift-1-label"
                              autocomplete="off"
                              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default false pl-16 pr-11"
                              data-testid="SelectDropdownInput__input"
                              id="downshift-0-input"
                              name="address"
                              placeholder="Select option"
                              value=""
                            />
                          </div>
                          <ul
                            aria-labelledby="downshift-1-label"
                            class="styles__SelectOptionsList-b2falt-1 cGgIup"
                            id="downshift-1-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn my-4 w-full"
                disabled=""
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Add Participant
                </div>
              </button>
            </div>
            <div
              class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <div
                class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
              >
                <div
                  class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
                  role="table"
                >
                  <table
                    cellpadding="0"
                    class="table-auto"
                  >
                    <thead>
                      <tr
                        class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                        role="row"
                      >
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--0"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Avatar
                            </div>
                          </div>
                        </th>
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--1"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Address
                            </div>
                          </div>
                        </th>
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--2"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Action
                            </div>
                          </div>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      role="rowgroup"
                    >
                      <tr
                        class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                        data-testid="recipient-list__recipient-list-item"
                      >
                        <td
                          class="py-6 w-14"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </td>
                        <td
                          class="py-6"
                        >
                          <div
                            class="mb-1 text-sm font-semibold text-theme-secondary-500"
                          >
                            <span>
                              Participant #1
                            </span>
                          </div>
                          <div
                            class="max-w-sm"
                          >
                            <div
                              class="inline-flex items-center no-ligatures"
                            >
                              <span
                                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                              </span>
                            </div>
                          </div>
                        </td>
                        <td
                          class="py-6 w-20 text-right"
                        >
                          <button
                            class="Button__StyledButton-mdtvtf-0 hrpPWq"
                            data-testid="recipient-list__remove-recipient"
                            type="button"
                          >
                            <div
                              class="flex relative items-center space-x-2"
                            >
                              <div
                                class="py-1"
                              >
                                <div
                                  class="sc-bdfBwQ fPrsah"
                                  height="1em"
                                  width="1em"
                                >
                                  <svg>
                                    trash.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </button>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="minParticipants"
            >
              Minimum Required Signatures
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                data-testid="MultiSignatureRegistrationForm__min-participants"
                name="minParticipants"
                type="number"
                value="0"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO pr-4 pointer-events-none text-theme-secondary-400"
              >
                out of 2
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="0"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="0"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </section>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form should render review step 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div>
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          data-testid="MultiSignature__review-step"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Review your multisignature registration details
              </div>
            </div>
          </div>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 coAmnd mt-8 no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
              >
                Cryptoasset
              </div>
              <div
                class="font-semibold"
              >
                ARK Devnet
              </div>
            </div>
            <div
              aria-label="ARK Devnet"
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
              >
                Sender
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="inline-flex items-center no-ligatures"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    <span
                      class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
              >
                Multisignature Participants
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
                >
                  <div
                    class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top hidden"
                            >
                              <div>
                                Avatar
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top hidden"
                            >
                              <div>
                                Address
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                          data-testid="recipient-list__recipient-list-item"
                        >
                          <td
                            class="py-4 w-12"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                              data-testid="Avatar"
                            >
                              <div
                                class="w-full h-full"
                              >
                                <img
                                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                />
                              </div>
                            </div>
                          </td>
                          <td
                            class="py-4"
                          >
                            <div
                              class="max-w-lg"
                            >
                              <div
                                class="inline-flex items-center no-ligatures"
                              >
                                <span
                                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                                  data-testid="address__wallet-address"
                                >
                                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                                </span>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                          data-testid="recipient-list__recipient-list-item"
                        >
                          <td
                            class="py-4 w-12"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                              data-testid="Avatar"
                            >
                              <div
                                class="w-full h-full"
                              >
                                <img
                                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                />
                              </div>
                            </div>
                          </td>
                          <td
                            class="py-4"
                          >
                            <div
                              class="max-w-lg"
                            >
                              <div
                                class="inline-flex items-center no-ligatures"
                              >
                                <span
                                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                                  data-testid="address__wallet-address"
                                >
                                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                                </span>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
              >
                Minimum Required Signatures
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-1 font-semibold"
                >
                  <span>
                    2
                  </span>
                  <span
                    class="text-theme-secondary-500"
                  >
                    out of 2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
              >
                Type
              </div>
              <div
                class="font-semibold"
              >
                Multisignature Registration
              </div>
            </div>
            <div>
              <div
                class="Circle-uw7h4j-0 JkqUV border-black bg-theme-background"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-2"
          >
            <div
              class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <div
                class="relative p-4"
              >
                <div
                  class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                >
                  <div
                    class="flex flex-col w-1/2 justify-center px-4 py-2"
                  >
                    <span
                      class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                    >
                      Transaction Amount
                    </span>
                    <span
                      class="mt-1 text-lg font-semibold"
                      data-testid="total-amount-box__transaction-amount"
                    >
                      0 DARK
                    </span>
                  </div>
                  <div
                    class="flex flex-col w-1/2 justify-center px-4 py-2 text-right"
                  >
                    <span
                      class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                    >
                      Transaction Fee
                    </span>
                    <span
                      class="mt-1 text-lg font-semibold"
                      data-testid="total-amount-box__transaction-fee"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2"
                >
                  <div
                    class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        plus.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 dark:border-theme-secondary-800 justfiy-center bg-theme-secondary-100 dark:bg-theme-secondary-800"
              >
                <span
                  class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                >
                  Total Amount
                </span>
                <span
                  class="text-2xl font-bold"
                  data-testid="total-amount-box__total"
                >
                  1.354 DARK
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form should render transaction details 1`] = `
<DocumentFragment>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Type
      </div>
      <div
        class="font-semibold"
      >
        Multisignature Registration
      </div>
    </div>
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-text"
    >
      <div
        class="sc-bdfBwQ iyevwF"
        height="20"
        width="20"
      >
        <svg>
          multisig.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Generated Address
      </div>
      <div
        class="font-semibold"
      />
    </div>
  </div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ByQkj undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Transaction Fee
      </div>
      <div
        class="font-semibold"
      >
        <span
          data-testid="Amount"
        >
          5 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
